tests/compile_fail/attr_visibility.stderr
error[E0364]: `PubCrateVariant` is private, and cannot be re-exported
  --> tests/compile_fail/attr_visibility.rs:19:9
   |
19 | pub use error::PubCrateVariant;
   |         ^^^^^^^^^^^^^^^^^^^^^^
   |
note: consider marking `PubCrateVariant` as `pub` in the imported module
  --> tests/compile_fail/attr_visibility.rs:19:9
   |
19 | pub use error::PubCrateVariant;
   |         ^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: struct `PrivateVariant` is private
  --> tests/compile_fail/attr_visibility.rs:18:16
   |
18 | pub use error::PrivateVariant;
   |                ^^^^^^^^^^^^^^ private struct
   |
note: the struct `PrivateVariant` is defined here
  --> tests/compile_fail/attr_visibility.rs:6:14
   |
6  |     #[derive(WithContext)]
   |              ^^^^^^^^^^^
   = note: this error originates in the derive macro `WithContext` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0616]: field `0` of struct `PrivateField` is private
  --> tests/compile_fail/attr_visibility.rs:28:7
   |
28 |     t.0;
   |       ^ private field
